--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Flask-Cors==3.0.9
 Flask-RESTful==0.3.8
 future==0.18.2
 google==3.0.0
+gunicorn==20.0.4
 ibm-cloud-sdk-core==1.7.3
 ibm-watson==4.7.1
 idna==2.10
