--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ urllib3==1.25.10
 virtualenv==20.1.0
 websocket-client==0.48.0
 Werkzeug==1.0.1
+whitenoise==5.2.0
 wrapt==1.12.1
 xlrd==1.2.0
 XlsxWriter==1.3.7
